2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 - Don't mention tablestreams any more.
 - Fixes #246.  Thanks Chris Angelico.
2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-pipeline.hxx, src/connection_base.cxx:
 - encoding_code() can't be "throw ()"; it calls activate().
 - Crashed program when connection was lost before transaction started.
 - Thanks Vasya Pupkin for reporting this with a great little test program.
2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/subtransaction.hxx:
 - Fixed broken example.  Thanks Chris Angelico.
2011-11-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt, win32/mingw.mak.template:
 - Remove quotes that confused MinGW make.
 - MinGW's make tool has a different name.
 - As per patch in #244, thanks Sam Kapilivksy.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 debian/libpqxx.docs, debian/libpqxx-dev.docs:
 - Removed reference to old TODO file.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Cosmetic.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Documentation patch from #243.  Thanks Sam Kapilivsky.
2011-11-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx,
 test/unit/test_errorhandler.cxx:
 - Provide access to a connection's errorhandlers list.
 - Fixes #242.  Thanks Sam Kapilivsky for pointing out the need.
2011-11-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/errorhandler.hxx, src/notify-listen.cxx:
 - Added missing #include <functional>
 - Fixes #241.  Thanks Sam Kapilivsky.
2011-11-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-libpqxx.mak.template:
 - Use debug library where appropriate, as per #238 (thanks Sam Kapilivksy).
 win32/vc-test-unit.mak.template:
 - Build test/unit, not test, also as per #238
2011-11-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
 - Overhaul by Sam Kapilivsky.  Thanks once again!